Case 97809: Fixing video styling on mobile/tablet

--- a/webroot/sites/syddjursdetdertaeller.dk/themes/custom/sddt/.gulp/less/components/components.sections.less
+++ b/webroot/sites/syddjursdetdertaeller.dk/themes/custom/sddt/.gulp/less/components/components.sections.less
@@ -147,6 +147,12 @@
       min-height: 100%;
     }
   }
+
+  &__video {
+    min-height: 0px;
+    background: @color-black;
+  }
+
 }
 
 // Triple section
